<resources>
    <string name="app_name">LatteEc</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="sign_up_email">请输入邮箱</string>
    <string name="sign_up_pswd">请输入密码</string>
    <string name="sign_up_name">姓名</string>
    <string name="sign_up_phone">手机号码</string>
    <string name="sign_up_re_pswd">重复密码</string>
    <string name="sign_up_hint">已经注册了？请登录</string>
    <string name="sign_in_hint">还没有账户？请注册</string>
    <string name="delegate_dicover_faxian">发现</string>
    <string name="item_detail_top_surplus">本月结余</string>
    <string name="item_detail_top_consume">月支出</string>
    <string name="item_detail_top_income">月收入</string>
    <string name="delegate_index_add_consume">支出</string>
    <string name="delegate_index_add_income">收入</string>
    <string name="delegate_index_add_remark">输入备注…</string>
    <string name="dia_home_rv_header">账单详情</string>
    <string name="draw_login_res">点击登录</string>
    <string name="login_edit_name">手机号码</string>
    <string name="login_edit_pswd">密码</string>
    <string name="login_tv_forget_pswd">忘记密码?</string>
    <string name="login_btn_login">登录</string>
    <string name="login_tv_create">创建新账号</string>
    <string name="login_tv_qq_login">QQ登录</string>
    <string name="register_tv_user">创建新账号</string>
    <string name="register_tv_code">获取验证码</string>
    <string name="register_btn_next_step">下一步</string>
    <string name="edit_user_create_name">起个好听的名字吧</string>
    <string name="edit_create_user_pswd">密码(6-16位)</string>
    <string name="user_sex">性别</string>
    <string name="user_sex_man">男</string>
    <string name="user_sex_woman">女</string>
    <string name="user_create_info">填写账号资料</string>
    <string name="tv_login_user">资料管理</string>
    <string name="save">保存</string>
    <string name="user_icon">头像</string>
    <string name="user_name">昵称</string>
    <string name="user_account">登录账号</string>
    <string name="user_login_qq">通过QQ登录</string>
    <string name="user_login_phone">通过账号登录</string>
    <string name="user_account_back">退出登录</string>
    <string name="tv_info_update">点击上面的内容可以修改</string>
    <string name="tv_login_user_manage">资料管理</string>
    <string name="login_user_qq">通过 QQ 登录</string>
    <string name="login_user_phone">通过 手机 登录</string>
    <string name="dia_rv_item_select">操作</string>
    <string name="dia_rv_item_update">修改</string>
    <string name="dia_rv_item_delegate">删除</string>
    <string name="analysis_bootom_text">———————到底了———————</string>
</resources>
