<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    android:background="@android:color/white"
    app:cardCornerRadius="7dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:layout_constraintTop_toTopOf="parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/dia_rv_item_select"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:id="@+id/tv_dia_update"
            android:gravity="center"
            android:text="@string/dia_rv_item_update"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_dia_delegate"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/dia_rv_item_delegate"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>

