<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/app_back"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bar_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/app_title_color"
        app:layout_collapseMode="pin">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/ic_login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:text="{icon-back}"
             />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/index_bar"
        android:layout_margin="30dp"
        android:background="@drawable/login_lin_back"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/login_edit_name"
            android:maxEms="16"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:inputType="textPersonName"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/app_text_color_dark"
            android:textColorHint="@color/app_text_color_light"
            android:textSize="19sp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_back" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_login_pswd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_edit_pswd"
                android:maxEms="18"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/app_text_color_dark"
                android:textColorHint="@color/app_text_color_light"
                android:textSize="19sp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_login_forget_pswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:text="@string/login_tv_forget_pswd"
                android:textColorHint="@color/app_text_color_dark"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_btn_back"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/login_btn_login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login_tv_create"
        android:textColor="@color/app_text_color_dark"
        android:textSize="18sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/line_login_qq"
        android:layout_marginBottom="50dp"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{icon-qq}"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/login_tv_qq_login"
            android:textColor="@color/app_title_color"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>