<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:background="@color/app_back"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bar_user_create"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top"
        android:background="@color/app_title_color"
        app:layout_collapseMode="pin">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/ic_login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="25sp"
            android:text="{icon-back}"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_create_info"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/index_bar"
        android:layout_margin="30dp"
        android:background="@drawable/login_lin_back"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:id="@+id/rl_img_settings"
            android:layout_marginBottom="30dp"
            android:layout_height="85dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user_create_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@mipmap/icon" />
            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:background="@drawable/user_create_img_cricle"
                android:text="{fa-camera}"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_user_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/edit_user_create_name"
            android:inputType="textPersonName"
            android:maxEms="16"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/app_text_color_dark"
            android:textColorHint="@color/app_text_color_light"
            android:textSize="19sp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_back" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_user_create_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/edit_create_user_pswd"
            android:inputType="textPassword"
            android:maxEms="18"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/app_text_color_dark"
            android:textColorHint="@color/app_text_color_light"
            android:textSize="19sp"
            tools:ignore="RtlSymmetry" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_back" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_create_user_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:maxEms="18"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:text="@string/user_sex"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textColor="@color/app_text_color_dark"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
            <RadioGroup
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/rad_user_create_man"
                    android:textColor="@color/app_text_color_dark"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:checked="true"
                    android:layout_marginRight="20dp"
                    android:text="@string/user_sex_man"
                    android:buttonTint="@color/app_title_color"
                    android:layout_marginEnd="20dp" />
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/rad_user_create_woman"
                    android:textColor="@color/app_text_color_dark"
                    android:layout_marginRight="20dp"
                    android:textSize="16sp"
                    android:buttonTint="@color/app_title_color"
                    android:layout_height="wrap_content"
                    android:text="@string/user_sex_woman"
                    android:layout_marginEnd="20dp" />
            </RadioGroup>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/app_back" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/login_btn_back"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/login_btn_login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>